Fix box shadow on header and some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,9 @@ button {
     row-gap: 16px;
 
     font-weight: 700;
-    padding: 16px 32px;
-    box-shadow: 2px 2px 2px 2px black; /* Under construction */
+    padding: 16px;
+    box-shadow: 4px 4px 8px rgb(200, 200, 200);
+    z-index: 1;
 }
 
 .header > * {
@@ -179,6 +180,7 @@ button {
 
 .head-action {
     align-items: center;
+    justify-content: center;
     gap: 16px;
 }
 
